app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  selector:
    matchLabels:
      app: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: landscaping-app
          name: app
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
              name: app
