app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 5001
  selector:
    app: app
  NodePort: None
